# AirQualityMonitor

./: .editorconfig  .gitignore  CONTRIBUTING.MD  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
aqi_monitor/: app.py  email_helper.py  twilio_helper.py
example/: twilio_sms.md
tests/unit/: test_main.py
